# trajectory_tracking

./: CMakeLists.txt  README.md  package.xml
launch/: iris_gazebo_launch.py
rviz/: trajectory_tracker.rviz
src/: trajectory_tracking_attitude_controlled.cpp  trajectory_tracking_velocity_controlled.cpp  waypoint_navigation.cpp  waypoint_navigation_attitude_controlled.cpp
